--- a/app/components/main/worry/worry.scss
+++ b/app/components/main/worry/worry.scss
@@ -2,8 +2,8 @@
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 40px;
-  padding-left: 15px;
-  padding-right: 15px;
+  /*padding-left: 15px;
+  padding-right: 15px;*/
   text-align: center;
   background-color: #ffffff;
   width: 1250px;
