--- a/app/components/main/key-to-success/key-to-success.scss
+++ b/app/components/main/key-to-success/key-to-success.scss
@@ -31,9 +31,7 @@
   width: 550px;
   color: rgb(255, 255, 255);
   border-radius: 6px;
-  border-width: 2px;
-  border-style: solid;
-  border-color: rgb(55, 46, 168);
+  border: 2px solid rgb(55, 46, 168);
   padding: 5px;
   margin: 0 0 50px 20px;
 }
