--- a/app/components/main/product-cost/cost.scss
+++ b/app/components/main/product-cost/cost.scss
@@ -2,19 +2,13 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  background: url("../images/book.jpg")0 0;
-  /*background-attachment: fixed;*/
-  background-size: cover;
-  background-position: 50% 55%;
+  padding-bottom: 50px;
 }
 .container-cost__opacity {
-  background-color: rgba(1, 1, 13, 0.73);
   height: 100%;
   padding-top: 45px;
-  padding-bottom: 40px;
 }
 .container-cost h2 {
-  color: #ffffff;
   text-transform: uppercase;
   font-weight: bold;
   margin-bottom: 44px;
@@ -23,8 +17,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-left: 7%;
-  padding-right: 7%;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 .cost__item {
   margin-top: 20px;
@@ -36,19 +30,15 @@
   background-color: rgba(255, 255, 255, 0.13);
   color: rgb(255, 255, 255);
   border-radius: 6px;
-  border-width: 2px;
-  border-style: solid;
-  border-color: rgb(54, 46, 168);
+  border: 2px solid rgb(54, 46, 168);
 }
 .cost__title {
   font-size: 22px;
   font-family: $headers-font-bold;
-  color: #ffffff;
   text-transform: uppercase;
   margin-bottom: 30px;
 }
 .cost__text {
-  color: #ffffff;
   font-weight: bold;
 }
 .cost__line-block {
@@ -56,46 +46,39 @@
 }
 .cost__line {
   width: 74%;
-  border-top: 3px solid rgb(104, 183, 255);
+  border-top: 2px solid rgb(53, 41, 169);
   margin: auto;
 }
 .cost__list ul{
   text-align: start;
   font-weight: bold;
-  color: #ffffff;
   padding-top:0;
   margin-top: 0;
 }
 .cost__trait {
-  color: rgb(194, 194, 194);
-  font-size: 36px;
-  text-decoration: line-through;
-  padding-top: 10px;
+  color: rgb(98, 98, 98);
+  font-size: 32px;
+  padding-bottom: 20px;
   font-family: $headers-font-bold;
 }
 .cost__now {
   text-transform: uppercase;
   font-family: $headers-font-bold;
-  color: #ffffff;
-  font-size: 20px;
-  padding-bottom: 10px;
+  font-size: 26px;
+  text-decoration:line-through;
+}
+.cost__now-all {
+  text-transform: uppercase;
+  font-family: $headers-font-bold;
+  font-size: 26px;
+  padding-bottom: 20px;
 }
 .cost__btn input {
   background-color: rgb(62, 53, 189);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-style: solid;
-  border-top-width: 1px;
+  border-radius: 5px;
+  border: 1px solid rgb(62, 53, 189);
   border-bottom-width: 3px;
-  border-left-width: 1px;
-  border-right-width: 1px;
-  border-color: rgb(62, 53, 189);
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 8px 16px;
   font-size: 18px;
   font-weight: bold;
   color: rgb(255, 255, 255);
@@ -109,6 +92,36 @@
   cursor: pointer;
 }
 .cost p{
-  color: #ffffff;
   float: left;
+}
+.cost__btn-pink input {
+  background-color: rgb(237, 113, 158);
+  border-radius: 5px;
+  border: 1px solid rgb(237, 113, 158);
+  border-bottom-width: 3px;
+  padding: 8px 16px;
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+}
+.cost__btn-pink input:hover {
+  background-color: rgb(233, 82, 137);
+  border-color: rgb(229, 51, 116);
+  color: rgb(255, 255, 255);
+}
+.cost__item-wrap-pink {
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.13);
+  color: rgb(255, 255, 255);
+  border-radius: 6px;
+  border: 4px solid rgb(237, 113, 158);
+}
+#money {
+  font-size: 26px;
+}
+.cost__line-pink {
+  width: 74%;
+  border-top: 4px solid rgb(237, 113, 158);
+  margin: auto;
 }
