--- a/app/components/main/trainings/training.scss
+++ b/app/components/main/trainings/training.scss
@@ -68,15 +68,13 @@
   color: #ffffff;
 }
 .consultation__photo {
-  width: 135px;
-  height: 205px;
-  border: 1px solid rgb(237, 113, 158);
   margin-right: 25px;
 }
 .consultation__photo img {
   width: 125px;
   height: 195px;
-  padding: 5px;
+  padding: 7px;
+  border: 1px solid #ed719e;
 }
 .consultation__text {
   width: 50%;
