--- a/app/components/main/key-to-success/key-to-success.scss
+++ b/app/components/main/key-to-success/key-to-success.scss
@@ -36,7 +36,7 @@
   margin: 0 0 50px 20px;
 }
 .key-item ul {
-  text-align: start;
+  text-align: left;
 }
 .key-item ul li {
   font-size: 16px;
@@ -56,24 +56,16 @@
   font-weight: bold;
 }
 .key-item__btn-wrap {
-  margin-bottom: 45px;
+  padding-bottom: 45px;
 }
 .key-item__btn {
+  display: block;
+  margin: auto;
   background-color: rgb(62, 53, 189);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-style: solid;
-  border-top-width: 1px;
+  border-radius: 5px;
+  border: 1px solid rgb(62, 53, 189);
   border-bottom-width: 3px;
-  border-left-width: 1px;
-  border-right-width: 1px;
-  border-color: rgb(62, 53, 189);
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 8px 16px;
   font-size: 18px;
   font-weight: bold;
   color: rgb(255, 255, 255);
