--- a/app/components/main/product-cost/cost.scss
+++ b/app/components/main/product-cost/cost.scss
@@ -50,7 +50,7 @@
   margin: auto;
 }
 .cost__list ul{
-  text-align: start;
+  text-align: left;
   font-weight: bold;
   padding-top:0;
   margin-top: 0;
