--- a/app/components/main/trainings/training.scss
+++ b/app/components/main/trainings/training.scss
@@ -86,7 +86,10 @@
 }
 .consultation__text ul {
   color: #ffffff;
-  text-align: start;
+  text-align: left;
+  li{
+    text-align: left;
+  }
 }
 .training-consultation__btn {
   background-color: rgb(61, 53, 189);
@@ -98,7 +101,7 @@
   color: rgb(255, 255, 255);
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
   cursor: pointer;
-  margin-bottom: 75px;
+  margin-bottom: 45px;
 }
 .training-consultation__btn:hover {
   background-color: rgb(55, 48, 170);
